# Mask-Face-Detection

./: README.md  model.py
ev_sdk/: CMakeLists.txt  Dockerfile  push.sh
ev_sdk/config/: algo_config.json
ev_sdk/include/.ipynb_checkpoints/: SampleDetector-checkpoint.hpp
ev_sdk/model/: .gitignore  convert_openvino.sh
ev_sdk/src/: SampleDetector.cpp  ji.cpp  main.cpp
ev_sdk/test/.ipynb_checkpoints/: test-checkpoint.cpp
